test_regress/t/t_covergroup_with_sample_args_too_many_bad.out
%Error: t/t_covergroup_with_sample_args_too_many_bad.v:14:26: Too many arguments in call to function 'sample'
                                                            : ... note: In instance 't'
   14 |     cov1.sample(5, 1'b0, 42);   
      |          ^~~~~~
                                                            : ... Location of function 'sample' declaration:
    8 |   covergroup cg_with_sample(int init) with function sample (int addr, bit is_read = 1'b0);
      |              ^~~~~~~~~~~~~~
        ... See the manual at https://verilator.org/verilator_doc.html?v=latest for more assistance.
%Error: Exiting due to
